--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 DATABASE_URL='file:./dev.db'
 
 # google oAuth
-GOOGLE_CLIENT_ID= ''
-GOOGLE_CLIENT_SECRETE= ''
+GOOGLE_CLIENT_ID= 'client id of google cloud'
+GOOGLE_CLIENT_SECRET= 'secret key of aplication in google cloud'
 NEXTAUTH_SECRET= #openSSH
 
