--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dayjs": "^1.11.7",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "googleapis": "^111.0.0",
     "next": "13.1.5",
     "next-auth": "^4.19.0",
     "nookies": "^2.5.2",
